fix heading spacing

--- a/src/assets/css/base/typography.css
+++ b/src/assets/css/base/typography.css
@@ -24,7 +24,7 @@ h6 {
 	font-weight: var(--font-weight-medium);
 	line-height: 1.2;
 	margin-bottom: 0.5em;
-	margin-top: 0.5em;
+	margin-top: 1em;
 }
 
 h1,
