--- a/src/assets/css/components/navigation.css
+++ b/src/assets/css/components/navigation.css
@@ -22,13 +22,3 @@
 		}
 	}
 }
-
-.navigation--social {
-	& a {
-		&:hover,
-		&:focus {
-			background-color: var(--color-primary);
-			color: var(--color-background);
-		}
-	}
-}
